# build-chain-with-polkadot-sdk

./: Cargo.toml  README.md
.github/workflows/: ci.yml
pallets/community/: Cargo.toml
pallets/community/src/: lib.rs
pallets/template/src/: lib.rs
