[package]
name = "pallet-community"
description = "A pallet offers an ability to manage an onchain community"
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-std = { default-features = false, workspace = true }
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
polkadot-sdk = { workspace = true, features = [
 "experimental",
 "runtime",
], default-features = false }


[features]
default = ["std"]
std = ["codec/std", "polkadot-sdk/std", "scale-info/std", "sp-std/std"]
